Added notebooks for dimensionality reduction

--- a/notebooks/models_ensembles_tuning.ipynb
+++ b/notebooks/models_ensembles_tuning.ipynb
@@ -226,8 +226,8 @@
     "def fit_n_times(model, x_train, y_train, x_test, y_test, n_iters = 10):\n",
     "    metrics = np.zeros(5)\n",
     "    for _ in range(n_iters):\n",
-    "        model.fit(train_features, y_train)\n",
-    "        y_test_prob = model.predict_proba(test_features)[:,1]\n",
+    "        model.fit(x_train, y_train)\n",
+    "        y_test_prob = model.predict_proba(x_test)[:,1]\n",
     "        metrics += print_model_metrics(y_test, y_test_prob, verbose = False, return_metrics = True)\n",
     "    metrics /=10\n",
     "    print('F1: {:.3f} | Pr: {:.3f} | Re: {:.3f} | AUC: {:.3f} | Accuracy: {:.3f} \\n'.format(*metrics))"
@@ -325,8 +325,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
-    "heading_collapsed": true
+    "Collapsed": "false"
    },
    "source": [
     "## Naive Bayes"
@@ -337,7 +336,6 @@
    "execution_count": 49,
    "metadata": {
     "Collapsed": "false",
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -372,8 +370,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
-    "heading_collapsed": true
+    "Collapsed": "false"
    },
    "source": [
     "## KNN"
@@ -384,7 +381,6 @@
    "execution_count": 51,
    "metadata": {
     "Collapsed": "false",
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -464,8 +460,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
-    "heading_collapsed": true
+    "Collapsed": "false"
    },
    "source": [
     "## XGBoost"
@@ -475,8 +470,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
-    "Collapsed": "false",
-    "hidden": true
+    "Collapsed": "false"
    },
    "outputs": [
     {
@@ -508,7 +502,7 @@
     "                            max_depth = best_params['max_depth'], \n",
     "                            reg_alpha = best_params['reg_alpha'], \n",
     "                            n_jobs = -1)\n",
-    "fit_n_times(rf, train_features, y_train, test_features, y_test)"
+    "fit_n_times(xgb, train_features, y_train, test_features, y_test)"
    ]
   },
   {
@@ -549,7 +543,7 @@
     "              optimizer=Adam(),\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "checkpoint = ModelCheckpoint('./', monitor = 'val_accuracy', verbose = 1, save_best_only=True)\n",
+    "checkpoint = ModelCheckpoint('./saved_models', monitor = 'val_accuracy', verbose = 1, save_best_only=True)\n",
     "history = simple_nn.fit(train_features.todense(), y_train,\n",
     "                    batch_size=batch_size,\n",
     "                    epochs=epochs,\n",
@@ -566,7 +560,7 @@
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "\n",
-    "simple_nn = load_model('./')"
+    "simple_nn = load_model('./saved_models')"
    ]
   },
   {
@@ -644,7 +638,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "# Voting Classifier"
+    "# Stacking Classifier"
    ]
   },
   {
@@ -653,7 +647,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "Finally, one last thing we can try is the Voting Classifier = basically a weighted average of the predictions of different models. Since we are using the fast ai tabular learner we wont be able to use Sklearn's `VotingClassifier` instead we'll just run a simple loop that gets the predictions of each model and runs a weighted average. "
+    "Finally, one last thing we can try is the Stacking Classifier = basically a weighted average of the predictions of different models. Since we are using the fast ai tabular learner we wont be able to use Sklearn's `VotingClassifier` instead we'll just run a simple loop that gets the predictions of each model and runs a weighted average. "
    ]
   },
   {
@@ -872,27 +866,6 @@
    "source": [
     "misclassified_idx = y_test != y_test_pred\n",
     "high_confidence_indices = np.argsort(y_test_prob[misclassified_idx])[-10:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Those Who Lost Savings Find Little Comfort', 'not-clickbait'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test[misclassified_idx].values[279]"
    ]
   },
   {
